# worthdoing-capabilities

./: .gitignore  Claude.md  README.md  pyproject.toml
src/worthdoing_capabilities/: __init__.py
src/worthdoing_capabilities/auth/: resolver.py
src/worthdoing_capabilities/cache/: store.py
src/worthdoing_capabilities/capabilities/: __init__.py
src/worthdoing_capabilities/capabilities/embeddings/: capability.yaml  handler.py
src/worthdoing_capabilities/capabilities/eodhd_eod/: capability.yaml  handler.py
src/worthdoing_capabilities/capabilities/eodhd_fundamentals/: capability.yaml  handler.py
src/worthdoing_capabilities/capabilities/eodhd_search/: capability.yaml  handler.py
src/worthdoing_capabilities/capabilities/exa_answer/: capability.yaml  handler.py
src/worthdoing_capabilities/capabilities/exa_contents/: capability.yaml  handler.py
src/worthdoing_capabilities/capabilities/exa_find_similar/: capability.yaml  handler.py
src/worthdoing_capabilities/capabilities/exa_search/: capability.yaml  handler.py
src/worthdoing_capabilities/capabilities/excel_create/: capability.yaml  handler.py
src/worthdoing_capabilities/cli/: __init__.py  main.py
src/worthdoing_capabilities/contracts/: loader.py  models.py
src/worthdoing_capabilities/executors/: base.py  http_executor.py  python_executor.py  registry.py  shell_executor.py  workflow_executor.py
src/worthdoing_capabilities/memory/: __init__.py  record.py
src/worthdoing_capabilities/registry/: registry.py
src/worthdoing_capabilities/runtime/: engine.py
src/worthdoing_capabilities/validation/: validator.py
tests/: conftest.py
tests/fixtures/: invalid_contract.yaml  sample_handler.py  valid_contract.yaml
tests/integration/: test_runtime.py
tests/unit/: test_auth.py  test_cache.py  test_contracts.py  test_record.py  test_registry.py  test_validation.py
(+74 files in other folders)
