[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worthdoing-capabilities"
version = "0.1.0"
description = "Official capability package by WorthDoing AI — portable, composable, production-grade agent actions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "WorthDoing AI", email = "admin@worthdoing.ai" },
]
keywords = ["ai", "agents", "capabilities", "worthdoing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
wdcap = "worthdoing_capabilities.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/worthdoing_capabilities"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["worthdoing_capabilities"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
packages = ["worthdoing_capabilities"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
